book/tests/snapshots/snapshot__tests__prql__language-features__dates-and-times-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive age_at_year_end = (@2022-12-31 - dob)\n"
---
from employees
derive age_at_year_end = @2022-12-31 - dob



