book/tests/snapshots/snapshot__tests__prql__language-features__dates-and-times-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from orders\nderive should_have_shipped_today = (order_time < @08:30)\n"
---
from orders
derive should_have_shipped_today = order_time < @08:30



