book/tests/snapshots/snapshot__tests__prql__language-features__dates-and-times-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from commits\nderive first_prql_commit = @2020-01-01T13:19:55-0800\n"
---
from commits
derive first_prql_commit = @2020-01-01T13:19:55-0800



