book/tests/snapshots/snapshot__tests__prql__language-features__dates-and-times-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from projects\nderive first_check_in = start + 10days\n"
---
from projects
derive first_check_in = start + 10days



