book/tests/snapshots/snapshot__tests__prql__language-features__distinct-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect department\ngroup department (\n  take 1\n)\n"
---
from employees
select department
group department (
  take 1
)



