book/tests/snapshots/snapshot__tests__prql__language-features__distinct-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "# youngest employee from each department\nfrom employees\ngroup department (\n  sort age\n  take 1\n)\n"
---
from employees
group department (
  sort age
  take 1
)



