book/tests/snapshots/snapshot__tests__prql__language-features__f-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect full_name = f\"{first_name} {last_name}\"\n"
---
from employees
select full_name = f"{first_name} {last_name}"



