book/tests/snapshots/snapshot__tests__prql__language-features__f-strings-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from web\nselect url = f\"http{tls}://www.{domain}.{tld}/{page}\"\n"
---
from web
select url = f"http{tls}://www.{domain}.{tld}/{page}"



