book/tests/snapshots/snapshot__tests__prql__language-features__null-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter first_name == null\nfilter null != last_name\n"
---
from employees
filter first_name == null
filter null != last_name



