book/tests/snapshots/snapshot__tests__prql__language-features__ranges-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from events\nfilter (date | in @1776-07-04..@1787-09-17)\nfilter (magnitude | in 50..100)\nderive is_northern = (latitude | in 0..)\n"
---
from events
filter (
  date
  in @1776-07-04..@1787-09-17
)
filter (
  magnitude
  in 50..100
)
derive is_northern = (
  latitude
  in 0..
)



